--- a/app/frontend/src/components/lateral/style.css
+++ b/app/frontend/src/components/lateral/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 .sidebar {
-  position: fixed; /* Torna o menu lateral fixo */
+  position: fixed;
   top: 0;
   left: 0;
-  width: 30px; /* Largura encolhida */
+  width: 40px; /* Largura encolhida */
   height: 100vh;
   background-color: #2c3e50;
   color: #ffffff;
-  padding: 20px 10px;
+  padding: 15px 10px;
   overflow-y: auto;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   transition: width 0.3s ease;
@@ -20,7 +20,7 @@
 }
 
 .sidebar.expanded {
-  width: 180px; /* Largura expandida ao clicar */
+  width: 220px; /* Largura expandida ao clicar */
   background-color: #3f5871;
 }
 
@@ -37,7 +37,7 @@
   opacity: 0;
   transition: opacity 0.3s ease;
   width: 100%;
-  padding: 20px;
+  padding: 15px;
   text-align: left;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .sidebar h1 {
-  font-size: 17px;
+  font-size: 18px;
   margin-bottom: 10px;
 }
 
@@ -54,40 +54,45 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
+  width: 100%;
+ 
 }
 
 .form-group label {
-  font-size: 13px;
+  font-size: 14px;
   color: #ffffff;
   margin-bottom: 5px;
 }
 
 .form-group input[type="number"],
+.form-group input[type="text"],
 .form-group select {
-  padding: 8px;
+  padding: 10px;
   border-radius: 4px;
-  border: none;
+  border: 1px solid #ccc;
   width: 100%;
   font-size: 15px;
   box-sizing: border-box;
+  background-color: #fff;
+  color: #2c3e50;
 }
 
+
 .sidebar button[type="submit"] {
-  padding: 10px;
+  padding: 12px;
   background-color: #60686c;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 15px;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
 .sidebar button[type="submit"]:hover {
   background-color: #8c989e;
-  color: #2c3e50;
-  width: 100%;
 }
 
 .loading {
@@ -98,8 +103,12 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .loading {
@@ -112,102 +121,63 @@
   margin: 10px auto;
 }
 
+/* Responsividade */
 @media (max-width: 768px) {
-  /* Menu fixo no topo para dispositivos móveis */
   .sidebar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: auto;
-    padding: 10px;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
+    padding: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: height 0.3s ease; /* Transição suave para altura */
   }
 
-  /* Expande de cima para baixo ao clicar no botão */
   .sidebar.expanded {
-    height: 67vw; /* Ocupa a tela inteira de cima para baixo */
+    height: auto;
     flex-direction: column;
+    padding: 15px;
     align-items: flex-start;
-    padding-top: 5px;
-    padding-bottom: 15px;
-    width: 100%;
   }
 
-  /* Exibe o conteúdo ocupando 100% da largura */
   .menu-content {
     display: none;
-    width: 95%;
+    width: 100%;
     flex-direction: column;
-    align-items: center;
     opacity: 0;
     transition: opacity 0.3s ease;
-    padding: 0;
   }
 
   .sidebar.expanded .menu-content {
     display: flex;
     opacity: 1;
-
   }
 
-  .sidebar h1 {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-
-  /* Organizar inputs no topo, ocupando 100% */
   .form-group {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     margin-bottom: 15px;
   }
 
-  .form-group label {
-    margin-bottom: 5px;
-    font-size: 14px;
-    width: 100%;
-  }
-
   .form-group input[type="number"],
+  .form-group input[type="text"],
   .form-group select {
-    width: 100%; /* Ocupa a largura total */
-    padding: 8px;
-    font-size: 16px;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-  /* Botão de envio ocupando 100% da largura */
-  .sidebar button[type="submit"] {
     width: 100%;
     padding: 10px;
-    margin-top: 10px;
-    font-size: 15px;
-    background-color: #60686c;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    font-size: 16px;
   }
 
-  .sidebar button[type="submit"]:hover {
-    background-color: #8c989e;
-    color: #2c3e50;
+  .sidebar button[type="submit"] {
+    width: 100%;
+    padding: 12px;
+    font-size: 15px;
   }
 }
 
-
-/* NOVO */
-
+/* Botão Treinar */
 .train-button {
-  padding: 10px;
+  padding: 12px;
   background-color: #ff9800;
   color: #fff;
   border: none;
@@ -216,6 +186,7 @@
   font-size: 15px;
   margin-top: 10px;
   width: 100%;
+  transition: background-color 0.3s ease;
 }
 
 .train-button:hover {
@@ -226,4 +197,3 @@
   background-color: #ccc;
   cursor: not-allowed;
 }
-
